--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -63,6 +63,7 @@ strong {
 .icon {
   margin-right: 0.4rem;
   font-size: var(--text-lg);
+  color: var(--color-gruvbox-bright-aqua);
 }
 
 @font-face {
