add transition, new pages, and contact methods. make the web more responsive

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -54,6 +54,11 @@ strong {
   color: var(--color-gruvbox-yellow);
 }
 
+footer {
+  margin-top: 3rem;
+  font-size: 0.9rem;
+}
+
 .comment {
   font-style: italic;
   color: var(--color-gruvbox-light4);
