--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -68,6 +68,7 @@ footer {
   background: var(--color-gruvbox-dark0);
   border: 1px solid var(--color-gruvbox-orange);
   padding: 1em;
+  border-radius: 4px;
 }
 .icon {
   margin-right: 0.4rem;
