fix border radius for quote item

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -78,6 +78,7 @@ footer {
 .quote {
   background: var(--color-gruvbox-dark0);
   border-left: 4px solid var(--color-gruvbox-bright-red);
+  border-radius: var(--radius-sm);
   padding: 1.5rem;
   font-style: italic;
   color: var(--color-gruvbox-light4);
